# Nuvola

./: .gitignore  .gitmodules  Build.bat  BuildModules.bat  CMakeLists.txt  GenSources.bat  GitUpdate.bat  Lunity.bat  Nuvola.bat  README.md  SetupAndBuild.bat
Injector/: App.cs  CMakeLists.txt  IMCAGUI.cs  Injector.cs  Win32.cs  package.json
Injector/Electron/: index.html  main.js  package.json
Injector/Electron/Main/: index.html
Injector/Electron/Main/CSS/: style.css
Injector/Electron/Main/JS/: title-funcs.js
Injector/Managed/: CMakeLists.txt  Injector.cs  Win32.cs
Injector/Native/: CMakeLists.txt  main.cpp
Injector/src-tauri/: tauri.conf.json
Lunity/: CMakeLists.txt  main.cpp
Lunity/Client/: CMakeLists.txt  Client.h
Lunity/Client/Bridge/: AABB.h  Actor.h  BlockSource.h  CMakeLists.txt  ClientInstance.h  Dimension.h  DynamicStruct.h  FontList.h  GuiData.h  Level.h  LocalPlayer.h  LoopbackPacketSender.h  MinecraftGame.h  MinecraftUIRenderContext.h  Mob.h  Player.h  README.md  ScreenContext.h  Tessellator.h  bridge.json
Lunity/Client/Events/: ActorRotateEvent.h  CMakeLists.txt  Event.cpp  Event.h  EventCancellable.cpp  EventCancellable.h  EventData.h  EventHandler.cpp  EventHandler.h  EventRegistry.cpp  EventRegistry.h  ICancellable.h  KeyEvent.h  KeyPressEvent.h  Listener.h  MobSwingEvent.h  MouseEvent.h  PlayerTickEvent.h  RenderEvent.h
Lunity/Client/Events/Actor/: SetRotEvent.h
Lunity/Client/Events/Global/: KeyPressEvent.h  MouseEvent.h
Lunity/Client/Events/Interaction/: TickEvent.h
Lunity/Client/Events/LocalPlayer/: CMakeLists.txt  HeadRotYEvent.cpp  HeadRotYEvent.h  UpdateHeadYEvent.h
Lunity/Client/Events/Mob/: UpdateRot.h
Lunity/Client/Events/Renderer/: UIRenderEvent.h
Lunity/Client/Features/: CMakeLists.txt  Category.cpp  Command.cpp  Command.h  CommandMgr.cpp  CommandMgr.h  ISetting.h  ManagedItem.cpp  ManagedItem.h  Manager.h  Module.cpp  Module.h  ModuleMgr.cpp  ModuleMgr.h  Setting.cpp  Setting.h
Lunity/Client/Features/Commands/: CMakeLists.txt  SwingCommand.cpp
Lunity/Client/Features/Modules/: CMakeLists.txt  TabUI.cpp  TabUI.h  Test.cpp  Test.h
Lunity/Client/Modules/: CMakeLists.txt  Module.cpp  Module.h
Lunity/Client/OLD-Bridge/: Actor.h  CMakeLists.txt  LocalPlayer.h  Mob.h
Lunity/Client/Panel/: WebPanel.cpp  WebPanel.h
Lunity/Client/Patches/: CMakeLists.txt  IPatch.cpp  IPatch.h  PatchManager.cpp  PatchManager.h
Lunity/Client/Patches/Actor/: CMakeLists.txt  SetRotHook.cpp  (+2 more)
Lunity/Client/Renderer/: Renderer.cpp  Renderer.h
Lunity/Lib/: CMakeLists.txt
Lunity/Lib/kiero/: CMakeLists.txt
Lunity/Mem/: Mem.cpp  Mem.h
Lunity/Render/Custom/: Renderer.h
Lunity/Render/RenderContext/: CMakeLists.txt  MinecraftRenderer.cpp  MinecraftRenderer.h
Lunity/Utils/: CMakeLists.txt  Event.h  IAnimWrapper.cpp  IAnimWrapper.h  Math.h  MinecraftRenderer.cpp  MinecraftRenderer.h  Renderer.cpp  Renderer.h  Utils.cpp  Utils.h  VersionUtils.cpp  VersionUtils.h
Nuvola/: CMakeLists.txt  main.cpp
Nuvola/Client/: CMakeLists.txt
Nuvola/Client/Bridge/: AABB.h  Actor.h  ActorType.h  BlockSource.h  ClientInstance.h  FontEntry.h  FontList.h  FontRepository.h  GameMode.h  GuiData.h  IntOption.h  Level.h  LocalPlayer.h  LoopbackPacketSender.h  MeshHelpers.h  MinecraftGame.h  MinecraftUIRenderContext.h  Mob.h  MovePlayerPacket.h  NamespacedKey.h  Option.h  Options.h  Packet.h  Player.h  PlayerAuthInputPacket.h  ScreenContext.h  SurvivalMode.h  Tessellator.h  bridge.json
Nuvola/Client/Events/: ActorEvent.h  ActorRotateEvent.h  CMakeLists.txt  Cancellable.h  ChatEvent.h  DXPresentEvent.h  Event.h  EventHandler.cpp  EventHandler.h  KeyEvent.h  Listener.h  MobEvent.h  MobSwingEvent.h  MouseEvent.h  NormalTickEvent.h  PacketEvent.h  PacketListener.h  PlayerAuthInputPacketEvent.h  PlayerEvent.h  PlayerTickEvent.h  RenderEvent.h
Nuvola/Client/Features/: CMakeLists.txt  Category.h  Command.cpp  Command.h  CommandMgr.cpp  CommandMgr.h  ISetting.h  ManagedItem.h  Manager.h  Module.cpp  Module.h  ModuleMgr.cpp  ModuleMgr.h  Setting.h
Nuvola/Client/Panel/: CMakeLists.txt  WebPanel.h
Nuvola/Client/Patches/: CMakeLists.txt  IPatch.h  PatchManager.cpp  PatchManager.h
Nuvola/Lib/: CMakeLists.txt
Nuvola/Lib/Kiero/: CMakeLists.txt
Nuvola/Mem/: CMakeLists.txt  Mem.cpp  Mem.h  SigInfo.h
Nuvola/Render/: CMakeLists.txt  IAnimWrapper.h
Nuvola/Render/Custom/: CMakeLists.txt  Renderer.cpp  Renderer.h
Nuvola/Render/ImGui/: CMakeLists.txt
Nuvola/Render/RenderContext/: CMakeLists.txt  MinecraftRenderer.cpp  MinecraftRenderer.h
Nuvola/Utils/: CMakeLists.txt  Event.h  Math.h  Nuv.h  Utils.cpp  Utils.h  VersionUtils.cpp  VersionUtils.h
(+143 files in other folders)
